# arff

./: .gitignore  README.md  pyproject.toml
docs/: python-matlab-performance-analysis.md
figures/: ConvergenceComparisons.py  EnergyTest.py  GenerateComparisons.py  OctaExactnessTest.py  OdecoExactnessTest.py  PrismFigures.py  ProjectionComparison.py  __init__.py
src/arff_io/: Coeff2Frames.py  ExportFrames.py  Frames2Octa.py  ImportFrames.py  Octa2Frames.py  Octa2Odeco.py  OctaTensorGradient.py  Odeco2Frames.py  OdecoTensorGradient.py  Sph024ToMonomial.py  __init__.py  _common.py
src/batchop/: __init__.py  batchop.m  batchop.py
src/mbo/: AlignmentConstrainedLinearSolve.py  MBO.m  MBO.py  OctaMBO.py  OdecoMBO.py  __init__.py  _basis.py  bundle.py
src/mesh/: ExportMesh.py  GeometricPrimalLM.py  ImportMesh.py  ProcessMesh.py  TetVolumes.py  __init__.py
src/plot/: ExportIntegralCurves.py  ExtractSingularities.py  FrameFieldMovie.py  IntegralCurves.py  PlotDeg4Poly.py  PlotFrames.py  PlotIntegralCurves.py  PlotInterpolatedFrames.py  PlotRealY4.py  PlotSingularGraph.py  PlotVertexScalarField.py  RadialSamples.py  RealY4Basis.py  VisualizeFrameField.py  VisualizeResult.py  __init__.py  _common.py
src/ray/: Ray.py  RayInit.py  RayMBO.py  RayProjection.py  __init__.py  _core.py
src/rtr/: OctaManopt.py  OctahedralBundleFactory.py  OdecoBundleFactory.py  OdecoManopt.py  __init__.py  _utils.py
src/sdp/: MultiSdp.py  MultiSdp2.py  __init__.py
src/variety/: AlignMat.py  ExpSO3.py  LoadOctaMats.py  LoadOctaMatsScaled.py  LoadOdecoMatsSph.py  LoadSO3Generators_Y2.py  (+7 more)
