[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arff"
version = "0.1.0"
description = "Algebraic Representations for Volumetric Frame Fields (Python ports)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
sdp = [
    "mosek>=10.0",
]
rtr = [
    "pymanopt>=2.2",
]
mesh = [
    "meshio>=5.3",
]
plot = [
    "matplotlib>=3.7",
    "pyvista>=0.43",
]
test = [
    "pytest>=7.4",
    "meshio>=5.3",
    "pymanopt>=2.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "arff_io*",
    "batchop*",
    "mbo*",
    "mesh*",
    "plot*",
    "ray*",
    "rtr*",
    "sdp*",
    "variety*",
]

[tool.setuptools.package-data]
variety = ["*.mat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
